[tool.poetry]
name = "sethfischer-osr"
version = "0.1.0"
description = "Alternative body for the NASA JPL Open Source Rover."
packages = [
    {include = "osr_common", from = "src"},
    {include = "osr_mechanical", from = "src"},
    {include = "osr_sphinx", from = "src"},
    {include = "osr_warehouse", from = "src"},
]
authors = [
    "Seth Fischer <seth@fischer.nz>",
]
readme = "README.rst"
license = "MIT"
homepage = "https://osr.fischer.nz/"
repository = "https://github.com/sethfischer/osr"
documentation = "https://osr.fischer.nz/"
keywords = [
    "jpl",
    "mars",
    "nasa",
    "perseverance",
    "robot",
    "robotics",
    "rover",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload",  # Prevent uploading to PyPI
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sethfischer/osr/issues"

[tool.poetry.scripts]
console = "osr_mechanical.console.application:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

cadquery = {version = "^2.2.0b2", allow-prereleases = true}
cadquery-ocp = {version = "^7.6.3a0", allow-prereleases = true}
casadi = {version = "^3.5.6pre2", allow-prereleases = true}

Jinja2 = "^3.1.2"
Sphinx = "^5.3.0"
cq-electronics = {git = "https://github.com/sethfischer/cq-electronics.git", rev = "2a8aa8a21e8a330e7a41faee4106899ccfca03d7"}
cq_warehouse = {git = "https://github.com/gumyr/cq_warehouse.git", rev = "c767b83cf8339f72defbcf6abcbfeb0ac9e2a565"}
sphinx-argparse-cli = "^1.10.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-cadquery = "^0.2.1"
wurlitzer = "^3.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
cffconvert = "^2.0.0"
commitizen = "^2.37.1"
doc8 = "^0.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.991"
Pillow = "^9.3.0"
pytest = "^7.2.0"
rstcheck = "^6.1.1"
CairoSVG = "^2.5.2"

[tool.poetry.group.cq-editor]
optional = true

[tool.poetry.group.cq-editor.dependencies]
cq-editor = {git = "https://github.com/CadQuery/CQ-editor.git", rev = "4b461fe195d0a4e99b9a6c43b7e1fe0cb4c5e77d"}
Logbook = "^1.5.3"
PyQt5 = "^5.15.7"
pyqtgraph = "^0.12.4"
spyder = "^5.3.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypi]
python_version = "3.9"
strict = true

[[tool.mypy.overrides]]
module = "cq_electronics.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cq_warehouse.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wurlitzer.*"
ignore_errors = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
