[tool.poetry]
name = "sethfischer-rover"
version = "0.1.0"
description = "Quarter-scale Mars rover based on the NASA Mars 2020 Mission Perseverance Rover"
packages = [
    {include = "osr_common", from = "src"},
    {include = "osr_elec", from = "src"},
    {include = "osr_mechanical", from = "src"},
    {include = "osr_sphinx", from = "src"},
    {include = "osr_warehouse", from = "src"},
]
authors = [
    "Seth Fischer <seth@fischer.nz>",
]
readme = "README.rst"
license = "MIT"
homepage = "https://rover.fischer.nz/"
repository = "https://github.com/sethfischer/rover"
documentation = "https://rover.fischer.nz/"
keywords = [
    "jpl",
    "mars",
    "nasa",
    "perseverance",
    "robot",
    "robotics",
    "rover",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload",  # Prevent uploading to PyPI
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sethfischer/rover/issues"

[tool.poetry.scripts]
console = "osr_mechanical.console.application:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

cadquery = "2.4.0"
cadquery-ocp = "7.7.0"
casadi = {version = "^3.5.6rc2", allow-prereleases = true}
numpy = "^1.26.4"  # https://github.com/CadQuery/cadquery/issues/1616

Jinja2 = "^3.1.2"
Sphinx = "7.*"
atopile = {git = "https://github.com/atopile/atopile.git", rev = "v0.2.x"}
cq-electronics = {git = "https://github.com/sethfischer/cq-electronics.git", rev = "64b49e939122f170989782e0fbdc4259754fd331"}
cq_warehouse = {git = "https://github.com/gumyr/cq_warehouse.git", rev = "c767b83cf8339f72defbcf6abcbfeb0ac9e2a565"}
pinout = "^0.0.20"
sphinx-argparse-cli = "^1.17.0"
sphinx-design = "^0.6.0"
sphinx-rtd-theme = "^3.0.2"
sphinxext-opengraph = "^0.9.0"
wurlitzer = "^3.1.1"

[tool.poetry.group.dev.dependencies]
CairoSVG = "^2.7.1"
OCP-stubs = {git = "https://github.com/CadQuery/OCP-stubs.git", rev = "7.6.3"}
Pillow = "11.*"
black = "^24.4.2"
cffconvert = "^2.0.0"
commitizen = "^4.0.0"
doc8 = "^0.11.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.7.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^7.4.4"
rstcheck = "^6.2.4"
scour = "^0.38.2"
sphinxcontrib-cadquery = "^0.9.0"
types-docutils = "^0.21.0.20240711"
types-requests = "^2.32.0.20240622"

[tool.poetry.group.cq-editor]
optional = true

[tool.poetry.group.cq-editor.dependencies]
cq-editor = {git = "https://github.com/CadQuery/CQ-editor.git", rev = "4b461fe195d0a4e99b9a6c43b7e1fe0cb4c5e77d"}
Logbook = "^1.7.0"
pyqt5-qt5 = [  # PyQt5 dependency
    {version = "^5.15.2, !=5.15.11, !=5.15.12", platform = "linux"},  # exclude releases without a Linux wheel
]
pyqtwebengine-qt5 = [  # PyQt5 dependency
    {version = "^5.15.2, !=5.15.11, !=5.15.12", platform = "linux"},  # exclude releases without a Linux wheel
]
PyQt5 = "^5.15.10"
pyqtgraph = "^0.12.4"
spyder = "^5.3.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypi]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "cq_warehouse.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pinout.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wurlitzer.*"
ignore_errors = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
